--- a/src/BeeFee/Applications/BeeFee.ImageApp/BeeFee.ImageApp.csproj
+++ b/src/BeeFee/Applications/BeeFee.ImageApp/BeeFee.ImageApp.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="ImageSharp" Version="1.0.0-alpha9-00194" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
 </Project>
