--- a/src/BeeFee/UI/BeeFee.ImagesWebApplication/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ImagesWebApplication/appsettings.json
@@ -14,6 +14,9 @@
 	},
 	"Settings": {
 		"ImagesFolder": "images",
-		"PublicImagesFolder": "/images"
+		"PublicOriginalFolder": "orig",
+		"PrivateOriginalFolder": "privateImages",
+		"MaxOriginalWidth": 1024,
+		"MaxOriginalHeight": 768
 	}
 }
