--- a/src/BeeFee/UI/BeeFee.WebApplication/.bowerrc
+++ b/src/BeeFee/UI/BeeFee.WebApplication/.bowerrc
@@ -1,5 +1,5 @@
 {
-  "directory": "wwwroot/lib"
-  //"proxy":"http://localhost:3129",
-  //"https-proxy":"http://localhost:3129"
+  "directory": "wwwroot/lib",
+  "proxy":"http://localhost:3129",
+  "https-proxy":"http://localhost:3129"
 }
