--- a/src/BeeFee/UI/BeeFee.WebApplication/bower.json
+++ b/src/BeeFee/UI/BeeFee.WebApplication/bower.json
@@ -11,7 +11,8 @@
     "bootstrap-datepicker": "v1.7.1",
     "sticky-kit": "v1.1.2",
     "datetimepicker": "2.5.4",
-    "ScrollToFixed": "1.0.8"
+    "ScrollToFixed": "1.0.8",
+    "jquery.maskedinput": "jquery-maskedinput#1.4.1"
   },
   "resolutions": {
     "jquery-validation": "1.17.0",
