--- a/src/BeeFee/UI/BeeFee.ImagesWebApplication/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ImagesWebApplication/appsettings.json
@@ -17,6 +17,7 @@
 		"PublicOriginalFolder": "orig",
 		"PrivateOriginalFolder": "privateImages",
 		"MaxOriginalWidth": 1024,
-		"MaxOriginalHeight": 768
+		"MaxOriginalHeight": 768,
+		"ResizedFolder": "min" 
 	}
 }
