--- a/src/BeeFee/Applications/BeeFee.JobsApp/BeeFee.JobsApp.csproj
+++ b/src/BeeFee/Applications/BeeFee.JobsApp/BeeFee.JobsApp.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="jsreport.Client" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\BeeFee.Model\BeeFee.Model.csproj" />
   </ItemGroup>
 
