add Url to TicketSettings always refresh for test

--- a/src/BeeFee/UI/BeeFee.ShedulerApplication/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ShedulerApplication/appsettings.json
@@ -23,6 +23,7 @@
 		"From": "test@mail.ru"
 	},
 	"TicketSettings": {
-		"Folder":  "d:\\pdf" 
+		"Url": "http://localhost:58219",
+		"Folder": "d:\\pdf"
 	} 
 }
