--- a/src/BeeFee/UI/BeeFee.WebApplication/BeeFee.WebApplication.csproj
+++ b/src/BeeFee/UI/BeeFee.WebApplication/BeeFee.WebApplication.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\..\Applications\BeeFee.ClientApp\BeeFee.ClientApp.csproj" />
     <ProjectReference Include="..\..\Applications\BeeFee.ImageApp\BeeFee.ImageApp.csproj" />
     <ProjectReference Include="..\..\Applications\BeeFee.LoginApp\BeeFee.LoginApp.csproj" />
+    <ProjectReference Include="..\..\Applications\BeeFee.ModeratorApp\BeeFee.ModeratorApp.csproj" />
     <ProjectReference Include="..\..\Applications\BeeFee.OrganizerApp\BeeFee.OrganizerApp.csproj" />
   </ItemGroup>
 
@@ -42,6 +43,11 @@
     <Content Update="Views\Home\_EventGridItem.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Moderator\Controllers\" />
+    <Folder Include="Areas\Moderator\Models\" />
   </ItemGroup>
 
 </Project>
