--- a/src/BeeFee/UI/BeeFee.ImagesWebApplication/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ImagesWebApplication/appsettings.json
@@ -12,11 +12,13 @@
 			}
 		}
 	},
-	"Settings": {
-		"ImagesFolder": "images",
-		"PublicOriginalFolder": "orig",
-		"PrivateOriginalFolder": "privateImages",
-		"MaxOriginalWidth": 1024,
-		"MaxOriginalHeight": 768
-	}
+  "Settings": {
+    "ImagesFolder": "images",
+    "PublicOriginalFolder": "orig",
+    "PrivateOriginalFolder": "privateImages",
+    "ResizedFolder": "resized",
+    "MaxOriginalWidth": 1024,
+    "MaxOriginalHeight": 768,
+    "RemoveImageAvailabilityTime":  null 
+  }
 }
