--- a/src/BeeFee/Applications/BeeFee.ImageApp/BeeFee.ImageApp.csproj
+++ b/src/BeeFee/Applications/BeeFee.ImageApp/BeeFee.ImageApp.csproj
@@ -8,17 +8,11 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-ci0108" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0001" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Sharp7Func\Sharp7Func.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.Extensions.Caching.Memory">
-      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.caching.memory\2.0.0\lib\netstandard2.0\Microsoft.Extensions.Caching.Memory.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
