Refactor tests for ImageApp

--- a/src/BeeFee/Tests/BeeFee.ImageApp.Tests/BeeFee.ImageApp.Tests.csproj
+++ b/src/BeeFee/Tests/BeeFee.ImageApp.Tests/BeeFee.ImageApp.Tests.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Applications\BeeFee.ImageApp\BeeFee.ImageApp.csproj" />
+    <ProjectReference Include="..\BeeFee.TestsApp\BeeFee.TestsApp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
