--- a/src/BeeFee/Applications/BeeFee.ImageApp/BeeFee.ImageApp.csproj
+++ b/src/BeeFee/Applications/BeeFee.ImageApp/BeeFee.ImageApp.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Sharp7Func\Sharp7Func.csproj" />
+    <ProjectReference Include="..\..\BeeFee.Model\BeeFee.Model.csproj" />
   </ItemGroup>
 
 </Project>
