--- a/src/BeeFee/UI/BeeFee.WebApplication/bundleconfig.json
+++ b/src/BeeFee/UI/BeeFee.WebApplication/bundleconfig.json
@@ -5,8 +5,10 @@
 		"outputFileName": "wwwroot/css/site.min.css",
 		// An array of relative input file paths. Globbing patterns supported
 		"inputFiles": [
+			"wwwroot/css/base.css",
 			"wwwroot/css/site.css",
 			"wwwroot/css/eventpage.css",
+			"wwwroot/css/xdsoft.css",
 			"wwwroot/css/validation.css"
 		]
 	},
@@ -14,8 +16,9 @@
 		"outputFileName": "wwwroot/css/siteprofile.min.css",
 		// An array of relative input file paths. Globbing patterns supported
 		"inputFiles": [
-			"wwwroot/lib/bootstrap/dist/css/bootstrap.css",
+			"wwwroot/css/base.css",
 			"wwwroot/css/eventpage.css",
+			"wwwroot/css/xdsoft.css",
 			"wwwroot/css/validation.css"
 		]
 	},
