--- a/src/BeeFee/UI/BeeFee.ShedulerApplication/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ShedulerApplication/appsettings.json
@@ -13,17 +13,17 @@
 		}
 	},
 	"MailSettings": {
-		"AttachmentsFolder": null,
-		"PickupDirectory": "d:\\mails",
-		"Host": null,
-		"Port": 0,
+		"AttachmentsFolder": "d:\\pdf",
+		"PickupDirectory": null,
+		"Host": "smtp.gmail.com",
+		"Port": 587,
 		"Ssl": true,
-		"User": null,
-		"Password": null,
-		"From": "test@mail.ru"
+		"User": "sitesender1@gmail.com",
+		"Password": "j0kerpet",
+		"From": "sitesender1@gmail.com"
 	},
 	"TicketSettings": {
 		"Url": "http://localhost:58219",
 		"Folder": "d:\\pdf"
-	} 
+	}
 }
