--- a/src/BeeFee/Applications/BeeFee.OrganizerApp/BeeFee.OrganizerApp.csproj
+++ b/src/BeeFee/Applications/BeeFee.OrganizerApp/BeeFee.OrganizerApp.csproj
@@ -8,4 +8,19 @@
     <ProjectReference Include="..\..\BeeFee.Model\BeeFee.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Exceptions\ExceptionResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ExceptionResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Exceptions\ExceptionResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ExceptionResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
