Создание/сохранение мероприятия после первого шага Редактор описания (висивик) не работает. Заменить.

--- a/src/BeeFee/UI/BeeFee.WebApplication/BeeFee.WebApplication.csproj
+++ b/src/BeeFee/UI/BeeFee.WebApplication/BeeFee.WebApplication.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Areas\Org\Views\Event\_CreateOrUpdateEvent.SettingFields.cshtml" />
+    <None Include="Areas\Org\Views\Event\CreateOrUpdateEvent.SettingFields.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -60,6 +60,10 @@
     <Content Update="Views\Home\_EventGridItem.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Org\Views\Shared\" />
   </ItemGroup>
 
 </Project>
