--- a/src/BeeFee/UI/BeeFee.ImagesWebApplication/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ImagesWebApplication/appsettings.json
@@ -12,25 +12,28 @@
 			}
 		}
 	},
-  "ImageAppSettings": {
-    "SettingsJsonFile": "settings.json",
-    "UserAvatarWidth": 400,
-    "UserAvatarHeight": 400,
-    "CompanyLogoWidth": 400,
-    "CompanyLogoHeight": 400,
-    "EventImageOriginalWidth": 2000,
-    "EventImageOriginalHeight": 2000,
-    "CacheTime": 20,
-    "TimeToDeleteinMinutes": 20 
-  },
-  "PathHandlingSettings": {
-    "ParentDirectory": "images",
-    "PrivateOriginalDirectory": "private",
-    "PublicOriginalFolder": "public",
-    "ResizedFolder": "min",
-    "UsersDirectory": "users",
-    "CompaniesDirectory": "companies",
-    "UserAvatarFileName": "avatar.jpg",
-    "CompanyLogoFileName": "company.jpg" 
-  } 
+	"ImageAppSettings": {
+		"SettingsJsonFile": "settings.json",
+		"UserAvatarWidth": 400,
+		"UserAvatarHeight": 400,
+		"CompanyLogoWidth": 400,
+		"CompanyLogoHeight": 400,
+		"EventImageOriginalWidth": 2000,
+		"EventImageOriginalHeight": 2000,
+		"CacheTime": 20,
+		"TimeToDeleteinMinutes": 20
+	},
+	"PathHandlingSettings": {
+		"ParentDirectory": "images",
+		"PrivateOriginalDirectory": "private",
+		"PublicOriginalFolder": "public",
+		"ResizedFolder": "min",
+		"UsersDirectory": "users",
+		"CompaniesDirectory": "companies",
+		"UserAvatarFileName": "avatar.jpg",
+		"CompanyLogoFileName": "company.jpg"
+	},
+	"ImagesWebServerSettings": {
+		"RegistratorHost": "localhost"
+	}
 }
