В настройке мер-я, показывать ошибки для категории и картинки

--- a/src/BeeFee/UI/BeeFee.WebApplication/BeeFee.WebApplication.csproj
+++ b/src/BeeFee/UI/BeeFee.WebApplication/BeeFee.WebApplication.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Areas\Org\Views\Event\CreateOrUpdateEvent.SettingFields.cshtml" />
+    <None Include="Areas\Org\Views\Event\CreateOrUpdateEvent\SettingFields.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
