--- a/src/BeeFee/UI/BeeFee.ShedulerApplication/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ShedulerApplication/appsettings.json
@@ -24,6 +24,7 @@
 	},
 	"TicketSettings": {
 		"Url": "http://localhost:58219",
-		"Folder": "d:\\pdf"
+		"Folder": "d:\\pdf",
+		"ImagesUrl": "http://localhost:62899"
 	}
 }
