--- a/src/BeeFee/UI/BeeFee.ImagesWebApplication/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ImagesWebApplication/appsettings.json
@@ -34,6 +34,6 @@
 		"CompanyLogoFileName": "company.jpg"
 	},
 	"ImagesWebServerSettings": {
-		"RegistratorHost": "localhost"
+		"RegistratorHost": "::1"
 	}
 }
