--- a/src/BeeFee/UI/BeeFee.WebApplication/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.WebApplication/appsettings.json
@@ -6,6 +6,7 @@
 		}
 	},
 	"Settings": {
-		"ImagesUrl": "http://localhost:62899"
+		"ImagesUrl": "http://localhost:62899",
+		"WebAppUrl": "http://localhost:5000"
 	}
 }
