--- a/src/BeeFee/UI/WebApplication3/WebApplication3.csproj
+++ b/src/BeeFee/UI/WebApplication3/WebApplication3.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TypeScriptToolsVersion>2.3</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Moderator\Views\" />
+    <Folder Include="Areas\Moderator\Models\Events\" />
   </ItemGroup>
 
   <ItemGroup>
