--- a/src/BeeFee/UI/BeeFee.ImagesWebApplication2/BeeFee.ImagesWebApplication2.csproj
+++ b/src/BeeFee/UI/BeeFee.ImagesWebApplication2/BeeFee.ImagesWebApplication2.csproj
@@ -5,10 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
   </ItemGroup>
 
@@ -17,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BeeFee.ImageApp2\BeeFee.ImageApp2.csproj" />
+    <ProjectReference Include="..\..\Applications\BeeFee.ImageApp2\BeeFee.ImageApp2.csproj" />
   </ItemGroup>
 
 </Project>
