Add some new test cases

--- a/src/BeeFee/BeeFee.ImageApp2.Tests/BeeFee.ImageApp2.Tests.csproj
+++ b/src/BeeFee/BeeFee.ImageApp2.Tests/BeeFee.ImageApp2.Tests.csproj
@@ -27,7 +27,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="3d30b5kz.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="pochemu-samolety-letaut4.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="wdh.chm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
