Try use ImagesApp

--- a/src/BeeFee/UI/BeeFee.ImagesWebApplication2/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ImagesWebApplication2/appsettings.json
@@ -14,7 +14,8 @@
 	},
 	"ImagesServerSettings": {
 		"AdminHosts": [ "::1" ],
-		"TempDirectory": "d:\tempimages",
+		"TempDirectory": "d:\\tempimages",
+		"PreviewDirectory": "d:\\images",
 		"TimeForCachingKeys": 10,
 		"MinimalSize": {
 			"Width": 100,
