Fix path in ImageService

--- a/src/BeeFee/UI/BeeFee.ImagesWebApplication2/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ImagesWebApplication2/appsettings.json
@@ -13,9 +13,9 @@
 		}
 	},
 	"ImagesServerSettings": {
-		"AdminHosts": [ "::1" ],
-		"TempDirectory": "d:\\tempimages",
-		"PreviewDirectory": "d:\\images",
+		"AdminHosts": [ "::1", "127.0.0.1" ],
+		"TempDirectory": "c:\\tempimages",
+		"PreviewDirectory": "c:\\images",
 		"TimeForCachingKeys": 10,
 		"MinimalSize": {
 			"Width": 100,
