--- a/src/BeeFee/Tests/BeeFee.ImageApp2.Tests/BeeFee.ImageApp2.Tests.csproj
+++ b/src/BeeFee/Tests/BeeFee.ImageApp2.Tests/BeeFee.ImageApp2.Tests.csproj
@@ -6,6 +6,12 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>true</Optimize>
+    <Prefer32Bit>false</Prefer32Bit>
+    <DefineConstants>TRACE;RELEASE;NETCOREAPP2_0</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <EmbeddedResource Include="IMG_3946.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
