--- a/src/BeeFee/UI/BeeFee.ImagesWebApplication2/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ImagesWebApplication2/appsettings.json
@@ -14,8 +14,8 @@
 	},
 	"ImagesServerSettings": {
 		"AdminHosts": [ "::1", "127.0.0.1" ],
-		"TempDirectory": "c:\\tempimages",
-		"PreviewDirectory": "c:\\images",
+		"TempDirectory": "d:\\beefee\\tempimages",
+		"PreviewDirectory": "d:\\beefee\\images",
 		"TimeForCachingKeys": 10,
 		"MinimalSize": {
 			"Width": 100,
@@ -24,7 +24,10 @@
 		"MaximalSize": {
 			"Width": 1600,
 			"Height": 1200
+		},
+		"PreviewSize": {
+			"Width": 200,
+			"Height": 200
 		}
 	}
-}
 }
