--- a/src/BeeFee/UI/BeeFee.ShedulerApplication/appsettings.json
+++ b/src/BeeFee/UI/BeeFee.ShedulerApplication/appsettings.json
@@ -13,7 +13,7 @@
 		}
 	},
 	"MailSettings": {
-		"AttachmentsFolder": "d:\\pdf",
+		"AttachmentsFolder": "d:\\beefee\\pdf",
 		"PickupDirectory": null,
 		"Host": "smtp.gmail.com",
 		"Port": 587,
@@ -24,7 +24,7 @@
 	},
 	"TicketSettings": {
 		"Url": "http://localhost:58219",
-		"Folder": "d:\\pdf",
-		"ImagesUrl": "http://localhost:62899"
+		"Folder": "d:\\beefee\\pdf",
+		"ImagesUrl": "http://localhost:64162"
 	}
 }
