--- a/src/BeeFee/Applications/BeeFee.ImageApp2/BeeFee.ImageApp2.csproj
+++ b/src/BeeFee/Applications/BeeFee.ImageApp2/BeeFee.ImageApp2.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>true</Optimize>
+  </PropertyGroup>
+
   <ItemGroup>
 	<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0001" />
